--- a/produk.html
+++ b/produk.html
@@ -24,9 +24,8 @@
           <div class="card">
             <img src="product1.jpg" class="card-img-top" alt="Product 1">
             <div class="card-body">
-              <h5 class="card-title">Product 1</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies lectus
-                sit amet consequat pellentesque.</p>
+              <h5 class="card-title">Stang Motor</h5>
+              <p class="card-text">stang batangan pada motor untuk dijadikan handle.</p>
               <a href="#" class="btn btn-primary">Learn More</a>
             </div>
           </div>
@@ -35,9 +34,8 @@
           <div class="card">
             <img src="product2.jpg" class="card-img-top" alt="Product 2">
             <div class="card-body">
-              <h5 class="card-title">Product 2</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies lectus
-                sit amet consequat pellentesque.</p>
+              <h5 class="card-title">Knalpot racing</h5>
+              <p class="card-text">Knalpot untuk memperindah tampilan motor.</p>
               <a href="#" class="btn btn-primary">Learn More</a>
             </div>
           </div>
@@ -46,9 +44,8 @@
           <div class="card">
             <img src="product3.jpg" class="card-img-top" alt="Product 3">
             <div class="card-body">
-              <h5 class="card-title">Product 3</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies lectus
-                sit amet consequat pellentesque.</p>
+              <h5 class="card-title">Karburator pulsar 135LS</h5>
+              <p class="card-text">Karburator khusus bajaj pulsar 135LS.</p>
               <a href="#" class="btn btn-primary">Learn More</a>
             </div>
           </div>
